# Eduka

./: .env  README.md
.github/workflows/: rust.yml
front-end/Log in/here is the login to style/: index.html  styles.css
front-end/here is the login to style/: index.html  styles.css
inventory/inventoryproject/: settings.py
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  main.rs
src/Log in/: style.css
src/holder/: index.html  main.js
