[package]
name = "eduka"
version = "0.0.0"
description = "eduka"
authors = ["MuGee"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1"
bcrypt = "0.10.1"
diesel = { version = "2.1.0", features = ["sqlite"] }
#dotenvy = "0.15"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
